tests/rosetta/transpiler/FS/check-machin-like-formulas.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/check-machin-like-formulas.fs(115,24): error FS0010: Unexpected keyword 'struct' in binding

/workspace/mochi/tests/rosetta/transpiler/FS/check-machin-like-formulas.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Check-machin-like-formulas' based on the file name 'check-machin-like-formulas.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
